Display fix for spacing.

--- a/style.css
+++ b/style.css
@@ -516,7 +516,7 @@ nav.main-navigation ul.main_menu_content li.single_nav_item ul.flyout_contents l
 	position:relative;
 	z-index:905;
 	padding:0 2% 35px 2%;
-	/* width:10%; */
+	width:10%;
 	
 }
 nav.main-navigation ul.main_menu_content li.single_nav_item ul.flyout_contents li a,
